@@ -39,3 +39,62 @@ tasks {
     dependsOn(testing.suites)
   }
 }
+
+// TODO(anuraaga): Move to conventions.
+
+testing {
+  suites {
+    val testJpms by registering(JvmTestSuite::class) {
+      targets {
+        all {
+          testTask.configure {
+            enabled = gradle.startParameter.projectProperties.get("testJavaVersion") != "8"
+          }
+        }
+      }
+    }
+  }
+}
+
+sourceSets {
+  val module by creating
+  main {
+    output.dir(mapOf("builtBy" to "compileModuleJava"), module.java.destinationDirectory)
+  }
+}
+
+configurations {
+  named("moduleImplementation") {
+    extendsFrom(configurations["implementation"])
+  }
+}
+
+tasks {
+  jar {
+    manifest.attributes.remove("Automatic-Module-Name")
+
+    exclude("**/HackForJpms.class")
+  }
+
+  compileJava {
+    exclude("module-info.java")
+  }
+
+  withType<Checkstyle>().configureEach {
+    exclude("module-info.java")
+  }
+
+  val compileModuleJava by existing(JavaCompile::class) {
+    with(options) {
+      release.set(9)
+    }
+  }
+
+  named<JavaCompile>("compileTestJpmsJava") {
+    with(options) {
+      release.set(9)
+      compilerArgs.add("--add-modules=org.junit.jupiter.api")
+      compilerArgs.add("--add-reads=io.opentelemetry.exporters.prometheus.test=org.junit.jupiter.api")
+    }
+  }
+}
